Update SortedArrayListPriorityQueue.java